--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 react
             </button>
             <button class="nav-tab" onclick="switchTab('next', event)">
-                <i class="devicon-nextjs-line"></i>
+                <i class="devicon-nextjs-plain"></i>
                 next
             </button>
             <button class="nav-tab" onclick="switchTab('vanilla', event)">
@@ -83,7 +83,6 @@
             <div id="react-content" class="tab-content">
                 <div class="title">React Import</div>
                 <div class="description">Add this import statement to your React component to import Taizun Font:</div>
-                div>
                 <div class="code-container">
                     <button class="copy-btn" onclick="copyToClipboard('react-code')">
                         <svg viewBox="0 0 24 24">
