--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
     <div class="hero">
         <h1 class="hero-title">
-            <div class="hero-line"><strong>Taizun</strong> Font</div>
+            <div class="hero-line"><strong><a href="https://taizun.site" target="_blank"
+                        class="taizun-link">Taizun</a></strong> Font</div>
             <div class="hero-line">Crafted with Precision</div>
         </h1>
     </div>
