--- a/index.html
+++ b/index.html
@@ -151,7 +151,21 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <div class="font-preview">
+        <div class="preview-header">
+            <h2 class="preview-title">Try Taizun Font</h2>
+            <p class="preview-description">Type something to see how it looks in Taizun font</p>
+        </div>
+        <div class="preview-container">
+            <textarea 
+                id="font-input" 
+                class="font-input" 
+                placeholder="Type your text here..."
+            >The quick brown fox jumps over the lazy dog</textarea>
+        </div>
+    </div>
+
+    <script src="script.js"></script></script>
 </body>
 
 </html>
